[package]
name = "wPing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
fastping-rs = "0.2"
pnet = "0.28.0"
rand = "0.8.5"
pnet_transport = "0.31.0"
fastrand = "1.8.0"
csv = "1.1.6"
